log
Thu, May 15, 2025  5:52:26 PM: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  2|4
total_score: 15/70
3f0e54c
Thu, May 15, 2025  6:14:40 PM: 
 sudoku.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  5|3
total_score: 35/70
3b60841
Thu, May 15, 2025  6:22:56 PM: 
 sudoku.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  5|3
total_score: 35/70
aa9fad4
Thu, May 15, 2025  6:24:04 PM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|3
total_score: 35/70
c99b483
Thu, May 15, 2025  6:26:46 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
711346a
Thu, May 15, 2025  6:34:23 PM: 
 sudoku.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
1196d7e
Thu, May 15, 2025  6:52:18 PM: 
 sudoku.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:129:9: error: variable 'elemento' set but not used [-Werror=unused-but-set-variable]
   Node *elemento = createNode() ;
         ^~~~~~~~
cc1.exe: all warnings being treated as errors
8e400a4
Thu, May 15, 2025  6:52:40 PM: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
28a15e5
Thu, May 15, 2025  7:01:30 PM: 
 sudoku.c | 15 ++++++++-------
 1 file changed, 8 insertions(+), 7 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:142:22: error: implicit declaration of function 'back' [-Werror=implicit-function-declaration]
     while((NodoAdj = back(listAdjTemp)) != NULL){
                      ^~~~
sudoku.c:142:20: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     while((NodoAdj = back(listAdjTemp)) != NULL){
                    ^
cc1.exe: all warnings being treated as errors
ff06131
Thu, May 15, 2025  7:01:52 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
2a44dc1
Thu, May 15, 2025  7:02:31 PM: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:155:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
9ea6601
Thu, May 15, 2025  7:19:02 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|0
total_score: 70/70
1f08fb9
